style/form.css
:root {
    --main-color: #4e73df;
    --main-green: #1cc88a;
}

::-webkit-scrollbar {
    width: 10px;
}

::-webkit-scrollbar-track {
    background: #CFCFCD;
    border-radius: 50px;
}

::-webkit-scrollbar-thumb {
    background: #000500;
    border-radius: 50px;
}

body {
    font-family: 'Fira Sans', sans-serif;
    background-color:#CFCFCD; 
    color:#000500;
    min-height:919px;
    margin: 0px;
    padding: 0px;
}

footer {
    display: flex;
    justify-content: center;
    width: 100%;
    margin-top: 165px;
    max-height: 76px;
}

.label-input {
    font-size: 20px;
}

.label-select {
    font-size: 20px;
}

select::-webkit-scrollbar {
    width: 10px;  
}

select::-webkit-scrollbar-track {
    background: var(--main-color);     
}

select::-webkit-scrollbar-thumb {
    background-color: #CFCFCD;    
    border-radius: 20px;       
    border: 3px solid var(--main-color);  
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
    -webkit-appearance: none; 
    margin: 0; 
}

.row {
    justify-content: center;
}

.tab {
    display:none;
}
/* ARREGLAR -> LOS 2 EN LA MISMA CLASE */
input.invalid {
    background-color: #ffdddd;
}

input.valid {
    background-color: white;
}

.step {
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbbbbb;
    border: none;
    border-radius: 50%;
    display: inline-block;
    opacity: 0.5;
}

.active {
    opacity: 1;
}

.incomplete {
    background-color: red;
}

.finish {
    background-color: #04AA6D ;
}

label {
    display:flex;
}

select {
    border:none;
    background:none;
    outline:none;
    margin-top: 15px;
    width:100%;
}

input {
    border:none;
    /* background:none; */
    outline:none;
    margin-top:15px;
    width:100%;
}

form {
    margin-bottom:5%;
}

.select-form {
    position:relative;
    border-radius: 3px;
    position:relative;
    margin: 50px 0;
}

.select-form select {
    width:100%;
    padding:0 5px;
}

.form-row {
    justify-content: center !important;
    margin-right: -50px;
    margin-left: -50px;
}

.card-body {
    padding:0 !important;
}

.input-form {
    position:relative;
    margin: 50px 0;
}

.input-form input {
    padding:0 5px;
    outline:none;
}

.form-block {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1rem;
    width: 60%;
    position: relative;
}

.form-block:last-child {
    margin-bottom: 0;
}

/* SELECTS */

.form-block select {
    box-sizing: border-box;
    width: 100%;
    border-bottom: 2px solid black;
    border-radius: 3px;
    transition: all 0.5s ease-in-out;
    outline: 0;
}

.form-block select + label {
    pointer-events: none;
}

.form-block select + label:after {
    content: attr(data-placeholder);
    display: block;
    position:absolute;
    top: -10%;
    left: 0.5rem; 
    transform: translate(-2.5%, 50%);
    transition: all 0.75s ease-in-out;
    padding: 0 0.25rem;
}

.form-block select:focus, .form-block select:valid {
    border-bottom: 2px solid var(--main-color);
}
/*  REVISAR */
.label-select select:focus + label:after, .label-select select:valid + label:after {
    /* transform: translate(-7.5%, -25%) scale(0.9, 0.9); */
    color: var(--main-color);
}

/* INPUT TEXT */

.form-block input[type=text] {
    box-sizing: border-box;
    width: 100%;
    border-bottom: 2px solid black;
    border-radius: 3px;
    transition: all 0.5s ease-in-out;
    outline: 0;
}

.form-block input[type=text] + label[data-placeholder] {
    pointer-events: none;
}

.form-block input[type=text] + label[data-placeholder]:after {
    content: attr(data-placeholder);
    display: block;
    position:absolute;
    top: -10%;
    left: 0.5rem;
    transform: translate(-2.5%, 50%);
    transition: all 0.75s ease-in-out;
    padding: 0 0.25rem;
}

.form-block input[type=text]:focus, .form-block input[type=text]:valid {
    border-bottom: 2px solid var(--main-color);
}

.form-block input[type=text]:focus + label[data-placeholder]:after, .form-block input[type=text]:valid + label[data-placeholder]:after {
    transform: translate(-7.5%, -25%) scale(0.9, 0.9);
    color: var(--main-color);
}

/* INPUTS NUMBER */

.form-block input[type=number] {
    box-sizing: border-box;
    width: 100%;
    border-bottom: 2px solid black;
    border-radius: 3px;
    transition: all 0.5s ease-in-out;
    outline: 0;
}

.form-block input[type=number] + label[data-placeholder] {
    pointer-events: none;
}

.form-block input[type=number] + label[data-placeholder]:after {
    content: attr(data-placeholder);
    display: block;
    position:absolute;
    top: -15%;
    left: 0.5rem;
    transform: translate(-2.5%, 50%);
    transition: all 0.75s ease-in-out;
    padding: 0 0.25rem;
}

.form-block input[type=number]:focus, .form-block input[type=number]:valid {
    border-bottom: 2px solid var(--main-color);
}

.form-block input[type=number]:focus + label[data-placeholder]:after, .form-block input[type=number]:valid + label[data-placeholder]:after {
    transform: translate(-7.5%, -25%) scale(0.9, 0.9);
    color: var(--main-color);
    background-color: none;
}

.divisor {
    border: 1px solid var(--main-color);
    border-radius: 2px;
    margin: 50px auto 50px auto;
    position: relative;
    width: 75%;
    width: auto;
}

#adv {
    display: none;
    color: #e74a3b;
    font-weight: bold;
    font-size: 30px;
}

.btn-gray {
    background-color: #909397;
    color: white;
}

.btn-green {
    background-color: var(--main-green);
    color: white;
}

.btn-plus {
    display: inline-block;
}

.modal-footer {
    justify-content: center;
}

/* Double line */

@media (max-width:1865px) {

    .double-line input[type=text] + label[data-placeholder]:after {
        content: attr(data-placeholder);
        display: block;
        position:absolute;
        top: -10%;
        left: 0.5rem;
        transform: translate(-2.5%, -40%);
        transition: all 0.75s ease-in-out;
        padding: 0 0.25rem;
        margin-top: 10px;
    }
    
    .double-line input[type=text]:focus + label[data-placeholder]:after, .double-line input[type=text]:valid + label[data-placeholder]:after {
        transform: translate(-7%, -70%) scale(0.9, 0.9);
        color: var(--main-color);
        background-color: none;
    }

    .double-line input[type=number] + label[data-placeholder]:after {
        content: attr(data-placeholder);
        display: block;
        position:absolute;
        top: -10%;
        left: 0.5rem;
        transform: translate(-2.5%, -40%);
        transition: all 0.75s ease-in-out;
        padding: 0 0.25rem;
        margin-top: 10px;
    }
    
    .double-line input[type=number]:focus + label[data-placeholder]:after, .double-line input[type=number]:valid + label[data-placeholder]:after {
        transform: translate(-7%, -70%) scale(0.9, 0.9);
        color: var(--main-color);
        background-color: none;
    }
}

